k8s/flask-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-server
  template:
    metadata:
      labels:
        app: flask-server
    spec:
      containers:
      - name: flask-server
        image: gcr.io/cryptic-pipe-435706-n0/flask-server
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
