k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-client
  template:
    metadata:
      labels:
        app: react-client
    spec:
      containers:
      - name: react-client
        image: gcr.io/cryptic-pipe-435706-n0/react-client:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-client
spec:
  selector:
    app: react-client
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer  # ClusterIP -> LoadBalancerに変更
