k8s/graphql-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql-bff
  template:
    metadata:
      labels:
        app: graphql-bff
    spec:
      containers:
      - name: graphql-bff
        image: gcr.io/cryptic-pipe-435706-n0/graphql-bff:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-bff
spec:
  selector:
    app: graphql-bff
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
