k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: graphql-bff
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-client
            port:
              number: 80
